--- a/eticaret/client/src/components/categories/style.css
+++ b/eticaret/client/src/components/categories/style.css
@@ -1,5 +1,5 @@
 .category-item {
-  @apply bg-[#F6E6CB] px-6 py-10 text-black cursor-pointer hover:bg-[#dad0bd]  transition-all text-center min-w-[145px] flex items-center !justify-center ;
+  @apply bg-[#F6E6CB] px-6 py-10 text-black cursor-pointer hover:bg-[#dad0bd] h-24  transition-all text-center min-w-[145px] flex items-center !justify-center ;
 }
 
 
